--- a/war/pom.xml
+++ b/war/pom.xml
@@ -44,6 +44,7 @@
             <groupId>org.example</groupId>
             <artifactId>jar</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -54,6 +55,7 @@
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-launcher</artifactId>
             <version>1.11.4</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.opentest4j</groupId>
